--- a/src/midterm project.ipynb
+++ b/src/midterm project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ee760edb",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9a96144a",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "6d4d075f",
    "metadata": {},
    "outputs": [],
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "611a2d28",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
     "pd.value_counts(data['Attrition_Flag'],normalize=True).plot.bar()\n",
     "plt.xlabel(\"Attrition_Flag\")\n",
     "plt.ylabel(\"percentage\")\n",
-    "plt.savefig(root_dir+\"/figures/Attrition_Flag.png\",transparent = True,bbox_inches='tight')\n",
+    "plt.savefig(root_dir+\"/figures/Attrition_Flag.png\",transparent = True,bbox_inches='tight',dpi = 300)\n",
     "plt.show()\n",
     "#Attrited customer is the \"churned\" customer and the its proportion is about 16.07%. So it is an imbalanced dataset.\n",
     "#It is a typical classification task."
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "35659f95",
    "metadata": {},
    "outputs": [],
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "1d25a0cf",
    "metadata": {},
    "outputs": [
@@ -1195,13 +1195,13 @@
    "source": [
     "pd.plotting.scatter_matrix(data[con_fea], figsize=(20, 20), marker='o',hist_kwds={'bins': 50}, \n",
     "                           c = pd.get_dummies(data['Attrition_Flag']).iloc[:,0],s=30, alpha=.1)\n",
-    "plt.savefig(root_dir+\"\\\\figures\\\\scatterplot.png\",transparent = True,bbox_inches='tight')\n",
+    "plt.savefig(root_dir+\"\\\\figures\\\\scatterplot.png\",transparent = True,bbox_inches='tight',dpi=300)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "32c9964a",
    "metadata": {},
    "outputs": [
@@ -1347,13 +1347,14 @@
     "    plt.legend()\n",
     "    plt.ylabel('counts')\n",
     "    plt.xlabel(feature)\n",
-    "    plt.savefig(root_dir+\"\\\\figures\\\\feature_and_target_variable\\\\{}_and_Attrition_Flag.png\".format(feature),transparent = True,bbox_inches='tight')\n",
+    "    plt.savefig(root_dir+\"\\\\figures\\\\feature_and_target_variable\\\\{}_and_Attrition_Flag.png\".format(feature),transparent = True,\n",
+    "                dpi = 300,bbox_inches='tight')\n",
     "    plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "2427577d",
    "metadata": {},
    "outputs": [
@@ -1471,7 +1472,8 @@
     "    count_matrix = data.groupby([feature, 'Attrition_Flag']).size().unstack()\n",
     "    count_matrix_norm = count_matrix.div(count_matrix.sum(axis=1),axis=0)\n",
     "    count_matrix_norm.plot(kind='bar', stacked=True)\n",
-    "    plt.savefig(root_dir+\"/figures/feature_and_target_variable/{} and Attrition_Flag.png\".format(feature),transparent = True,bbox_inches='tight')\n",
+    "    plt.savefig(root_dir+\"/figures/feature_and_target_variable/{} and Attrition_Flag.png\".format(feature),transparent = True,\n",
+    "                dpi = 300,bbox_inches='tight')\n",
     "    plt.show()"
    ]
   },
@@ -1627,13 +1629,13 @@
     "    data[feature].hist()\n",
     "    plt.xlabel(feature)\n",
     "    plt.ylabel('count')\n",
-    "    plt.savefig(root_dir+\"/figures/feature_distribution/{}.png\".format(feature),transparent = True)\n",
+    "    plt.savefig(root_dir+\"/figures/feature_distribution/{}.png\".format(feature),transparent = True,dpi = 300)\n",
     "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "b32df4dd",
    "metadata": {},
    "outputs": [
@@ -1751,7 +1753,7 @@
     "    (data[feature].value_counts()/data.shape[0]).sort_index().plot(kind = 'bar')\n",
     "    plt.xlabel(feature)\n",
     "    plt.ylabel('percentage')\n",
-    "    plt.savefig(root_dir+\"/figures/feature_distribution/{}.png\".format(feature),transparent = True,bbox_inches='tight')\n",
+    "    plt.savefig(root_dir+\"/figures/feature_distribution/{}.png\".format(feature),transparent = True,bbox_inches='tight',dpi = 300)\n",
     "    plt.show()"
    ]
   },
