--- a/src/midterm project.ipynb
+++ b/src/midterm project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "ee760edb",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "9a96144a",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "6d4d075f",
    "metadata": {},
    "outputs": [],
@@ -1160,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "35659f95",
    "metadata": {},
    "outputs": [],
@@ -2037,6 +2037,83 @@
     "yval = le.transform(y_val)\n",
     "ytest = le.transform(y_test)\n",
     "print(ytrain,yval,ytest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80a1a9a8",
+   "metadata": {},
+   "source": [
+    "**4. Choose an evaluation metrix**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0e753fb",
+   "metadata": {},
+   "source": [
+    "Precision-Recall metrix -> more emphasis on recall since it is more affordable to treat a non-churned customer as a churned customer than other way around"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff248089",
+   "metadata": {},
+   "source": [
+    "**5. Choose one or more ML techniques**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2731c61",
+   "metadata": {},
+   "source": [
+    "Logistic regression(lasso, Ridge, Elasticnet), Random Forest, SVC, XGBoost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19dca9dc",
+   "metadata": {},
+   "source": [
+    "Linearly correlation? Do we need to deal with it? Scatter plot?\n",
+    "\n",
+    "Drop the feature with highly correlation -> pearson correlation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7f80043",
+   "metadata": {},
+   "source": [
+    "**6. Tune the hyperparameter**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb3bff30",
+   "metadata": {},
+   "source": [
+    "**7. Interpret the model**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58818043",
+   "metadata": {},
+   "source": [
+    "Find the most important features -> Choose the best model\n",
+    "1. coefficient of linear models\n",
+    "2. permutation of the features.\n",
+    "3.shap ->local feature importance (technique)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "023151e5",
+   "metadata": {},
+   "source": [
+    "Baseline accuracy -> proportion of the major class "
    ]
   }
  ],
